--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h4><a href="http://ameera.epizy.com/?i=1">Homepage</a></h4>
 
-  <div id="header">The Best To Do App</div>
+  <div id="header">To Do App</div>
   <input id="todo-input" placeholder="Enter a todo" type="text">
   <button id="todo-submit"> +</button>
   <div id="todo-list"></div>
