--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h4><a href="http://ameera.epizy.com/?i=1">Homepage</a></h4>
   <div id="header">To Do App</div>
+  <label for="todo-input">Enter a todo:</label>
   <input id="todo-input" placeholder="Enter a todo" type="text">
   <button id="todo-submit"> +</button>
   <div id="todo-list"></div>
